--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: RahmaElbially/app:latest
+          tags: rahmaelbially/app:latest
