--- a/.github/workflows/unitTesting.yml
+++ b/.github/workflows/unitTesting.yml
@@ -15,6 +15,14 @@ jobs:
                 #     nodejs_version:18
         runs-on: ${{matrix.operating_system}}
         steps:
+            - name: Checkout Code
+              uses: actions/checkout@v3
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v3
+              with:
+                node-version: ${{ matrix.nodejs_version }}
+
             - name: Install Dependencies
               run: npm install
 
